Added about page content

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
         <main class="container">
             <section>
-                <div class="left block">
+                <div class="home left block">
                     <h2>Hello.</h2>
                     <p>My name is Josh. I'm originally from Florida, but I am currently residing in Atlanta. I'm a curious digital designer, effective marketing professional, and curious learner.<br> Feel free to browse my work, and don't be afraid to say hi!</p>
 
@@ -53,7 +53,7 @@
                     <a href="contact.html" class="contact-button">Say hi</a>
                 </div>
 
-                <div class="right block">
+                <div class="home right block">
                     <img src="images/webheadshot.jpg" alt="Josh Ostrander - Portrait" width="380">
                 </div>
             </section>
