--- a/about.html
+++ b/about.html
@@ -45,16 +45,19 @@
 
         <main class="container">
             <section>
-                <div class="left block">
-                    <h2>Hello.</h2>
-                    <p>My name is Josh. I'm originally from Florida, but I am currently residing in Atlanta. I'm a curious digital designer, effective marketing professional, and curious learner.<br> Feel free to browse my work, and don't be afraid to say hi!</p>
-
-                    <a href="work.html" class="work-button">My work</a>
-                    <a href="contact.html" class="contact-button">Say hi</a>
+                <div class="about left block">
+                    <img src="images/webheadshot.jpg" alt="Josh Ostrander - Portrait" width="380">
+                    <h2>About me</h2>
                 </div>
 
-                <div class="right block">
-                    <img src="images/webheadshot.jpg" alt="Josh Ostrander - Portrait" width="380">
+                <div class="about right block">
+                    <h2>Me, Myself, and I</h2>
+                    <p>My full name is Josh Ostrander, and I graduated in 2020 with a double major in Editing, Writing, and Media & Markeing from Florida State University.<br> After that, I found myself moving to Atlanta and getting my Masters from the University of Florida in Digital Stratetgy.<br> Currently, I work full-time as a Marketing Associate with Georiga Tech Athletics.</p>
+
+                    <h2>Everything Else</h2>
+                    <p>Outside of digital marketing and design, I love the outdoors and staying fit. I'm a bit of a film-nerd and I love discovering new places to eat around Atlanta.</p>
+                    
+                    <a href="contact.html" class="contact-button">Say hi</a>
                 </div>
             </section>
 
