--- a/contact.html
+++ b/contact.html
@@ -1,23 +1,54 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
     <head>
+        <!--Google Analytics-->
+
+
         <meta charset="utf-8">
-        <title>Contact Me</title>
 
-        <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
+        <meta name="keywords" content="portfolio graphic design marketing digital strategy freelance">
+        <meta name="description" content="Josh Ostrander's digital marketing and design portfolio.">
 
+        <title>Josh Ostrander</title>
+
+        <!--Google Fonts -->
+        <link rel="preconnect" href="https://fonts.googleapis.com"> 
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
+        <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300&family=Sarina&display=swap" rel="stylesheet">
+
+
+        <!-- CSS-->
         <link type="text/css" rel="stylesheet" href="css/styles.css">
+
+        <!--Favicon-->
+        <link rel="favicon" href="images/favicon.png">
     </head>
 
     <body>
-        <header>
-            <h1><a href="index.html">CONTACT FORM</a></h1>
-        </header>
+        <a href="index.html">
+            <img class="logo" src="images/logo.png" alt="Josh Ostrander Logo" width="350px">
+        </a>
+        <h1>Portfolio</h1>
+
+        <div class="nav">
+            <nav>
+                <ul class="navlist">
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="about.html">About me</a></li>
+                    <li><a href="work.html">Work</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                </ul>
+            </nav>
+        </div>
 
         <main class="container">
-            <h2>Say Hi!</h2>
-            <img class="wavinghand" src="images/wavinghand.gif" alt="Waving Hand" width="75">
-            <p>Please excuse the dust. This website is loading. In the mean time, please fill out the form below, and I will be in contact with you shortly!</p>
+            <div class="contact-left"></div>
+                <h2>Say Hi!</h2>
+                <p>Please excuse the dust. This website is loading. In the mean time, please fill out the form below, and I will be in contact with you shortly!</p>
+                <a href="https://www.linkedin.com/in/steven-josh-ostrander/" target="_blank">
+                    <img class="linkedinlogo" src="images/linkedin.png" alt="LinkedIn Logo" width="50px">
+                </a>
+            </div>
             
             <form class="contact-form" id="test_form" name="test_form" method="POST" action="form.php" onsubmit="return validateForm(this)">
                 <div class="first-name input">
