--- a/index.html
+++ b/index.html
@@ -26,10 +26,12 @@
 
     <body>
         <header>
-            <a href="index.html">
-                <img class="logo" src="images/logo.png" alt="Josh Ostrander Logo" width="350px">
-            </a>
-            <h1>Portfolio</h1>
+            <div class="nav-logo">
+                <a href="index.html">
+                    <img class="logo" src="images/logo.png" alt="Josh Ostrander Logo" width="350px">
+                </a>
+                <h1 hidden>Portfolio</h1>
+            </div>
 
             <div class="nav">
                 <nav>
