--- a/contact.html
+++ b/contact.html
@@ -28,7 +28,7 @@
         <a href="index.html">
             <img class="logo" src="images/logo.png" alt="Josh Ostrander Logo" width="350px">
         </a>
-        <h1>Portfolio</h1>
+        <h1 hidden>Portfolio</h1>
 
         <div class="nav">
             <nav>
