--- a/about.html
+++ b/about.html
@@ -44,20 +44,21 @@
         </header>
 
         <main class="container">
-            <section>
-                <div class="about left block">
+            <section class="about-container">
+                <div class="about-left-block">
+                    <h2 class="aboutme">About me</h2>
                     <img src="images/webheadshot.jpg" alt="Josh Ostrander - Portrait" width="380">
-                    <h2>About me</h2>
+                    
                 </div>
 
-                <div class="about right block">
+                <div class="about-right-block">
                     <h3>Me, Myself, and I</h3>
-                    <p>My full name is Josh Ostrander, and I graduated in 2020 with a double major in Editing, Writing, and Media & Markeing from Florida State University.<br> After that, I found myself moving to Atlanta and getting my Masters from the University of Florida in Digital Stratetgy.<br> Currently, I work full-time as a Marketing Associate with Georiga Tech Athletics.</p>
+                    <p>My full name is Josh Ostrander, and I graduated in 2020 with a double major in Editing, Writing, and Media & Markeing from Florida State University.After that, I found myself moving to Atlanta and getting my Masters from the University of Florida in Digital Stratetgy. Currently, I work full-time as a Marketing Associate with Georiga Tech Athletics.</p>
 
                     <h3>Everything Else</h3>
                     <p>Outside of digital marketing and design, I love the outdoors and staying fit. I'm a bit of a film-nerd and I love discovering new places to eat around Atlanta.</p>
 
-                    <a href="contact.html" class="contact-button">Say hi</a>
+                    <a href="contact.html" class="white-button">Say hi</a>
                 </div>
             </section>
 
