--- a/index.html
+++ b/index.html
@@ -46,16 +46,16 @@
         </header>
 
         <main class="container">
-            <section>
-                <div class="home left block">
+            <section class="home-container">
+                <div class="home-left-block">
                     <h2>Hello.</h2>
-                    <p>My name is Josh. I'm originally from Florida, but I am currently residing in Atlanta. I'm a curious digital designer, effective marketing professional, and curious learner.<br> Feel free to browse my work, and don't be afraid to say hi!</p>
+                    <p>My name is Josh. I'm originally from Florida, but I am currently residing in Atlanta. I'm a curious digital designer, effective marketing professional, and curious learner.<br><br> Feel free to browse my work, and don't be afraid to say hi!</p>
 
-                    <a href="work.html" class="work-button">My work</a>
-                    <a href="contact.html" class="contact-button">Say hi</a>
+                    <a href="work.html" class="white-button">My work</a>
+                    <a href="contact.html" class="white-button">Say hi</a>
                 </div>
 
-                <div class="home right block">
+                <div class="home-right-block">
                     <img src="images/webheadshot.jpg" alt="Josh Ostrander - Portrait" width="380">
                 </div>
             </section>
