Finalzed CSS for all pages

--- a/contact.html
+++ b/contact.html
@@ -41,16 +41,16 @@
             </nav>
         </div>
 
-        <main class="container">
-            <div class="contact-left"></div>
+        <main class="contact-container">
+            <div class="contact-left-block"></div>
                 <h2>Say Hi!</h2>
-                <p>Please excuse the dust. This website is loading. In the mean time, please fill out the form below, and I will be in contact with you shortly!</p>
+                <p>I’d love to connect! Feel free to say hi on one or more of the platforms, or send me a message here. Thanks for stopping by!</p>
                 <a href="https://www.linkedin.com/in/steven-josh-ostrander/" target="_blank">
                     <img class="linkedinlogo" src="images/linkedin.png" alt="LinkedIn Logo" width="50px">
                 </a>
             </div>
             
-            <form class="contact-form" id="test_form" name="test_form" method="POST" action="form.php" onsubmit="return validateForm(this)">
+            <form class="contact-form-" id="test_form" name="test_form" method="POST" action="form.php" onsubmit="return validateForm(this)">
                 <div class="first-name input">
                     <label for="firstname" class="label_input_wrap">First Name: </label>
                     <input type="text" name="req_firstname" id="firstname"  placeholder="ex. Dave" />
@@ -69,9 +69,7 @@
                 <div class="submit">
                     <input type="submit" value="Say Hi!">
                 </div>
-
             </form>
-
         </main>
     </body>
 </html>
