--- a/work.html
+++ b/work.html
@@ -48,30 +48,32 @@
                 <div class="mywork">
                     <h2>My work</h2>
                 </div>
+            </section>
                 
                 <!--The links to the live documents for the "Work Examples" came from already live links when I had previously displayed work experience online-->
+            <section class="work-container">
                 <div class="workex1">
-                    <h3>Airbnb Brand & Messaging Guide</h3>
-                    <p>A custom Brand & Messaging guide for Airbnb.<br> The guide contains brand messaging guidelines, example social and blog posts, and social advertising examples and strategies.</p>
-                    <a href="https://9e3b6804-7bbf-419e-901f-2b5a6e7b7e08.filesusr.com/ugd/58637c_d5a6ee3edd104cd2b2daf11cea33be6a.pdf" class="workex1-button" target="_blank">Brand Guide</a>
+                    <h3 class="blacktext">Airbnb Brand & Messaging Guide</h3>
+                    <p class="blacktext">A custom Brand & Messaging guide for Airbnb.<br> The guide contains brand messaging guidelines, example social and blog posts, and social advertising examples and strategies.</p>
+                    <a href="https://9e3b6804-7bbf-419e-901f-2b5a6e7b7e08.filesusr.com/ugd/58637c_d5a6ee3edd104cd2b2daf11cea33be6a.pdf" class="blackbutton" target="_blank">Brand Guide</a>
                 </div>
 
                 <div class="workex2">
-                    <h3>APB Store Digital Marketing Strategy</h3>
-                    <p>A 39-page guide with insights and examples of a proposed digital marketing strategy for the APB Store.<br> The strategy includes audience research, communication strategy, content and website examples, and email marketing strategies.</p>
-                    <a href="https://9e3b6804-7bbf-419e-901f-2b5a6e7b7e08.filesusr.com/ugd/58637c_e6e04e1283a24d9e88a933f86c4c2045.pdf" class="workex2-button" target="_blank">Strategy Guide</a>
+                    <h3 class="blacktext">APB Store Digital Marketing Strategy</h3>
+                    <p class="blacktext">A 39-page guide with insights and examples of a proposed digital marketing strategy for the APB Store.<br> The strategy includes audience research, communication strategy, content and website examples, and email marketing strategies.</p>
+                    <a href="https://9e3b6804-7bbf-419e-901f-2b5a6e7b7e08.filesusr.com/ugd/58637c_e6e04e1283a24d9e88a933f86c4c2045.pdf" class="blackbutton" target="_blank">Strategy Guide</a>
                 </div>
 
                 <div class="workex3">
-                    <h3>Facebook Advertisinig Campaign</h3>
-                    <p>I implemented a cross-platform social media advertising campaign that reached over 20,000 new users. The ads generated 500+ link clicks and drove brand awareness while keeping CPC and CPM below industry standards.</p>
-                    <a href="https://9e3b6804-7bbf-419e-901f-2b5a6e7b7e08.filesusr.com/ugd/58637c_783d03c6684a4d468248e8e8379b9bc2.pdf" class="workex3-button" target="_blank">Campaign Deck</a>
+                    <h3 class="blacktext">Facebook Advertisinig Campaign</h3>
+                    <p class="blacktext">I implemented a cross-platform social media advertising campaign that reached over 20,000 new users. The ads generated 500+ link clicks and drove brand awareness while keeping CPC and CPM below industry standards.</p>
+                    <a href="https://9e3b6804-7bbf-419e-901f-2b5a6e7b7e08.filesusr.com/ugd/58637c_783d03c6684a4d468248e8e8379b9bc2.pdf" class="blackbutton" target="_blank">Campaign Deck</a>
                 </div>
 
                 <div class="resume">
-                    <h3>Resume</h3>
-                    <p>This is my resume with all my professsional experience.</p>
-                    <a href="https://9e3b6804-7bbf-419e-901f-2b5a6e7b7e08.filesusr.com/ugd/58637c_fdab3f2e003f44a6b81901c7111f623c.pdf" class="resume-button" target="_blank">Resume</a>
+                    <h3 class="blacktext">Resume</h3>
+                    <p class="blacktext">This is my resume with all my professsional experience.</p>
+                    <a href="https://9e3b6804-7bbf-419e-901f-2b5a6e7b7e08.filesusr.com/ugd/58637c_fdab3f2e003f44a6b81901c7111f623c.pdf" class="blackbutton" target="_blank">Resume</a>
                 </div>
             </section>
 
