--- a/work.html
+++ b/work.html
@@ -1,9 +1,16 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
     <head>
-        <!--Google Analytics-->
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-BFZL4DJQE9"></script>
+        <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
 
-
+        gtag('config', 'G-BFZL4DJQE9');
+        </script>
+        
         <meta charset="utf-8">
 
         <meta name="keywords" content="portfolio graphic design marketing digital strategy freelance">
