--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <header>
             <div class="nav-logo">
                 <a href="index.html">
-                    <img class="logo" src="images/logo.png" alt="Josh Ostrander Logo" width="350px">
+                    <img class="logo" src="images/logo.png" alt="Josh Ostrander Logo" width="350">
                 </a>
                 <h1 hidden>Portfolio</h1>
             </div>
