--- a/contact.html
+++ b/contact.html
@@ -33,7 +33,7 @@
 
     <body>
         <a href="index.html">
-            <img class="logo" src="images/logo.png" alt="Josh Ostrander Logo" width="350px">
+            <img class="logo" src="images/logo.png" alt="Josh Ostrander Logo" width="350">
         </a>
         <h1 hidden>Portfolio</h1>
 
@@ -49,11 +49,11 @@
         </div>
 
         <main class="contact-container">
-            <div class="contact-left-block"></div>
+            <div class="contact-left-block">
                 <h2>Say Hi!</h2>
                 <p>I’d love to connect! Feel free to say hi on one or more of the platforms, or send me a message here. Thanks for stopping by!</p>
                 <a href="https://www.linkedin.com/in/steven-josh-ostrander/" target="_blank">
-                    <img class="linkedinlogo" src="images/linkedin.png" alt="LinkedIn Logo" width="50px">
+                    <img class="linkedinlogo" src="images/linkedin.png" alt="LinkedIn Logo" width="50">
                 </a>
             </div>
             
