--- a/work.html
+++ b/work.html
@@ -10,7 +10,7 @@
 
         gtag('config', 'G-BFZL4DJQE9');
         </script>
-        
+
         <meta charset="utf-8">
 
         <meta name="keywords" content="portfolio graphic design marketing digital strategy freelance">
@@ -34,7 +34,7 @@
     <body>
         <header>
             <a href="index.html">
-                <img class="logo" src="images/logo.png" alt="Josh Ostrander Logo" width="350px">
+                <img class="logo" src="images/logo.png" alt="Josh Ostrander Logo" width="350">
             </a>
             <h1 hidden>Portfolio</h1>
 
